syntax = "proto3";

package supercontractserver;

message OpenFile {
  string path = 1;
  string mode = 2;
}

message OpenFileReturn {
  bool success = 1;
  int64 identifier = 2;
}

message WriteFileStream {
  int64 identifier = 1;
  bytes buffer = 2;
}

message WriteFileStreamReturn {
  bool success = 1;
  uint64 num_bytes_written = 2;
}

message Flush {
  int64 identifier = 1;
}

message FlushReturn {
  bool success = 1;
}

message ReadFileStream {
  int64 identifier = 1;
}

message ReadFileStreamReturn {
  bool success = 1;
  bytes buffer = 2;
}

message CloseFile {
  int64 identifier = 1;
}

message CloseFileReturn {
  bool success = 1;
}

message PathExist {
  string path = 1;
}

message PathExistReturn {
  bool exist = 1;
}

message IsFile {
  string path = 1;
}

message IsFileReturn {
  bool is_file = 1;
}

message CreateDir {
  string path = 1;
}

message CreateDirReturn {
  bool success = 1;
}

message MoveFile {
  string old_path = 1;
  string new_path = 2;
}

message MoveFileReturn {
  bool success = 1;
}

message RemoveFile {
  string path = 1;
}

message RemoveFileReturn {
  bool success = 1;
}

message CreateDirIterator {
  string path = 1;
  bool recursive = 2;
}

message CreateDirIteratorReturn {
  int64 identifier = 1;
}

message HasNextIterator {
  int64 identifier = 1;
}

message HasNextIteratorReturn {
  bool has_next = 1;
}

message NextDirIterator {
  int64 identifier = 1;
}

message NextDirIteratorReturn {
  string name = 1;
  bool success = 2;
}

message RemoveDirIterator {
  int64 identifier = 1;
}

message RemoveDirIteratorReturn {
  bool success = 1;
}

message DestroyDirIterator {
  int64 identifier = 1;
}

message DestroyDirIteratorReturn {
  bool success = 1;
}